--- a/index.html
+++ b/index.html
@@ -9,32 +9,34 @@
     <!--navigation-->
     <nav>
         <div class="logo">
-            <a href="#home"><img src="logo.jpeg" alt="WebDesigner logo" width="150px" height="150px"></a>
+            <a href="index.html"><img src="images/logo.jpeg" alt="WebDesigner logo" width="150px" height="150px"></a>
+            
         </div>
         <ul>
-            <li><a href="#home">Home</a></li>
-            <li><a href="#about">About</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
             <li><a href="#services">Services</a></li>
             <li><a href="#portfolio">Portfolio</a></li>
-            <li><a href="#contact">Contact us</a></li>
+            <li><a href="contact.html">Contact us</a></li>
         </ul>
     </nav>
 
     <!--Hero Section-->
     <section id="home" class="hero">
         <div class="hero-content">
+            <h1>Tequila's Tech</h1>
             <h1>Transform your ideas into stunning websites </h1>
             <p> Affordable, responsive and creative web designs tailored for your business </p>
             <a href="#contact" class="cta-btn">Get started today</a>
         </div>
     </section>
 
-    <!--About section-->
+    <!--About section
     <section id="about" class="about">
-        <h2>About Me</h2>
+        <h2>About Me</h2><br>
         <p>HI, I'm a passionate web designer with over 2 years of experience. I specialize in creating responsive, user-friendly websites that help businesses stand out online</p>
         <p> My mission is to bring your vision to life with creativity and attention to detail.</p>
-    </section>
+    </section>-->
 
     <!--Services section-->
     <section id="services" class="services">
@@ -74,8 +76,8 @@
         </div>
     </section>
 
-    <!--Contact section-->
-    <section id="Contact" class="contact">
+    <!--Contact section
+    <section id="contact" class="#contact">
         <h2>Contact Me</h2>
         <form action="https://formspree.io/f/xblrepav" method="POST">
             <label for="name">Name:</label>
@@ -89,11 +91,12 @@
 
             <button type="submit">Send</button>
         </form>
-    </section>
+    </section>-->
 
     <!--footer-->
     <footer>
         <p>&copy; 2024 WebDesigner| All Rights Reserved </p>
     </footer>
+    <script src="script.js"></script>
 </body>
 </html>
