--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="index.html#services">Services</a></li>
-            <li><a href="index.html#portfolio">Portfolio</a></li>
+            <li><a href="index.html#project">Project</a></li>
             <li><a href="contact.html">Contact us</a></li>
         </ul>
     </nav>
