changes were made in the html and css page

--- a/index.html
+++ b/index.html
@@ -44,17 +44,17 @@
         <h2>Services</h2>
         <div class="service-cards">
             
-            <div class="service-card">
+            <div class="service-card-1">
                 <h3>E-commerce Solutions</h3>
                 <p>Building online stores that drive sales</p>
                 <a href="#" class="btn">Learn more</a>
             </div>
-                <div class="service-card">
+                <div class="service-card-2">
                     <h3>Custom Website Design</h3>
                     <p> Unique, tailor made websites that suit your brand.</p>
                     <a href="#" class="btn">Learn more</a>
                 </div>
-            <div class="service-card">
+            <div class="service-card-3">
                 <h3>UI/UX design</h3>
                 <p>Crafting user-friendly interfaces for an optimal user experience</p>
                 <a href="#" class="btn">Learn more</a>
@@ -65,7 +65,11 @@
     <!--Portfolio Section-->
     <section id="portfolio" class="portfolio">
         <h2>portfolio</h2>
-        <div class="portfolio-grid"></div>
+        <div class="portfolio-grid">
+            <div class="portfolio-item">
+            <img src="project1.jpg" alt="project 1">
+            <p> project 1- E-commerce site</p>
+        </div>
             <div class="portfolio-item">
                 <img src="project2.jpg" alt="project 2">
                 <p> project 2-porfolio website</p>
