i made changes in my html and css page

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My website</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
     <!--navigation-->
@@ -99,8 +100,16 @@
     </section>-->
 
     <!--footer-->
-    <footer>
-        <p>&copy; 2024 WebDesigner| All Rights Reserved </p>
+    <footer class="footer bg-dark text-light text-center">
+        <div class="container">
+        <p>&copy; 2024 Tequila's Tech| All Rights Reserved </p>
+            <div class="social-icons">
+                <a href="#"><i class="fab fa-facebook-f"></i></a>
+                <a href="#"><i class="fab fa-twitter"></i></a>
+                <a href="#"><i class="fab fa-github"></i></a>
+                <a href="#"><i class="fab fa-linkedin-in"></i></a>
+            </div>
+        </div>
     </footer>
     <script src="script.js"></script>
 </body>
