--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact | web designer</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
     <nav>
@@ -36,15 +37,15 @@
         </div>
 
         <!--contact form-->
-        <form action="submit_form.php" method="POST" class="contact-form">
+        <form action="submit-form.php" method="POST" class="contact-form">
             <div class="form-group">
                 <label for="name"> Your Name:</label>
-            <input type="text" id="name" name="name" required>
+            <input type="text" id="name" name="name" placeholder="Enter your name">
             </div>
             
             <div class="form-group">
             <label for="email">Your Email:</label>
-            <input type="email" id="email" name="email" required>
+            <input type="email" id="email" name="email" placeholder="Enter your email">
             </div>
 
             <div class="form-group">
@@ -58,8 +59,16 @@
 
     <a href="index.html" class="back-home-btn">back to home</a>
 <!--footer-->
-<footer>
-    <p>&copy; 2024 WebDesigner| All Rights Reserved </p>
+<footer class="footer bg-dark text-light text-center">
+    <div class="container">
+    <p>&copy; 2024 Tequila's Tech| All Rights Reserved </p>
+        <div class="social-icons">
+            <a href="#"><i class="fab fa-facebook-f"></i></a>
+            <a href="#"><i class="fab fa-twitter"></i></a>
+            <a href="#"><i class="fab fa-github"></i></a>
+            <a href="#"><i class="fab fa-linkedin-in"></i></a>
+        </div>
+    </div>
 </footer>
 <script src="script.js"></script>
 </body>
